# oxichrome

./: Cargo.toml  README.md
oxichrome/: Cargo.toml
oxichrome-build/: Cargo.toml
oxichrome-build/src/: manifest.rs  shims.rs  source_parser.rs
oxichrome-cli/: Cargo.toml
oxichrome-cli/src/: main.rs
oxichrome-cli/src/commands/: build.rs
oxichrome-core/src/: content_script.rs  lib.rs
oxichrome-macros/: Cargo.toml
oxichrome-macros/src/: lib.rs  parse.rs
oxichrome-macros/src/codegen/: content_script.rs  event_handler.rs  extension.rs  mod.rs  options_page.rs  popup.rs  side_panel.rs
oxichrome/src/: lib.rs
