[workspace]
resolver = "2"
members = [
    "oxichrome",
    "oxichrome-core",
    "oxichrome-macros",
    "oxichrome-build",
    "oxichrome-cli",
    "examples/counter-extension",
    "examples/color-picker",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/0xsouravm/oxichrome"
homepage = "https://oxichrome.dev"
authors = ["Sourav Mishra <sourav.m.bt@gmail.com>"]
