[package]
name = "oxichrome-build"
description = "Source parsing and build artifact generation for oxichrome"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
syn = { version = "2.0.114", features = ["full", "extra-traits", "visit", "parsing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
anyhow = "1.0.101"
