[package]
name = "oxichrome-macros"
description = "Proc macros for oxichrome"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[features]
default = ["ui-leptos"]
ui-leptos = []
ui-dioxus = []

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full", "extra-traits", "visit"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
